2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/parser/Monitor.c:
	Coverity #488: Avoid smashing an array on malformed config 
	files.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/dmx/glxProxy/glxsingle.c:
	Coverity #769: Fix a potential memory leak for systems that 
	allocate on malloc(0)

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Config.c:
	Coverity #838: Plug two more memory leaks.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Config.c:
	Coverity #837: Fix another another memory leak.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Config.c:
	Coverity #836: Fix another memory leak.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Config.c:
	Coverity #835: Plug memory leak in extension section parsing.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/parser/Keyboard.c:
	Coverity #812: Fix parser memory leak.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/dixmods/extmod/xf86vmode.c:
	Coverity #818: Avoid memory leak on error path.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* GL/glx/single2.c:
	Coverity #985: Avoid segfault on malloc failure.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* hw/dmx/dmxextension.c:
	Coverity #1037: Sanity check idx before use.

2006-04-05  Fredrik Höglund  <fredrik@kde.org>

	* Xext/Makefile.am:
	Put the screensaver extension back in the Xext module.

	* Xext/saver.c:
	* dix/globals.c:
	* include/globals.h:
	* os/WaitFor.c:
	Move the screenSaverSuspended variable to DIX globals.

	* configure.ac:
	Restore the old link order for the Xorg and Xdmx binaries.

2006-04-04  Adam Jackson  <ajax@freedesktop.org>

	* hw/darwin/darwin.c:
	* hw/xfree86/common/xf86Init.c:
	Bug #5300: Fix missing spaces in the Build OS line in the log. 
	(Egmont Koblinger)

2006-04-03  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Config.c: